# simple-fast-fix-scalper

./: CMakeLists.txt  README.md  SimpleScalper.cpp  SimpleScalper.h  config.cfg  main.cpp
tasks/: implement_scalper.md
